--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,17 @@
     <script src="{{rootURL}}assets/zubeirdev.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script>new WOW().init();</script>
+    {{Analytics}}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121955139-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-121955139-3');
+    </script>
+
 
 
 
