Change ui and project

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zubeirtech - Student and Software Developer</title>
-    <meta name="description" content="">
+    <meta name="description" content="I am a Student and a working student as a Software Developer. Check out my projects">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
@@ -13,6 +13,25 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/zubeirdev.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://imgur.com/fv6hbiY.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://imgur.com/fv6hbiY.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="https://imgur.com/fv6hbiY.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://imgur.com/fv6hbiY.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://imgur.com/fv6hbiY.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://imgur.com/fv6hbiY.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="https://imgur.com/fv6hbiY.png">
+    <meta name="theme-color" content="#ffffff">
 
     {{content-for "head-footer"}}
   </head>
