Change tab title

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Zubeirtech - Student and Software Developer</title>
+    <title>ZubeirTech - Student and Software Developer</title>
     <meta name="description" content="I am a Student and a working student as a Software Developer. Check out my projects">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
