--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,25 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ZubeirTech - Student and Software Developer</title>
-    <meta name="description" content="I am a Student and a working student as a Software Developer. Check out my projects">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="ZubeirTech - Student and Software Developer">
+    <meta name="description" content="I am a Student and a working student as a Software Developer. Check out my projects :)">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://zubeirtech.herokuapp.com/">
+    <meta property="og:title" content="ZubeirTech - Student and Software Developer">
+    <meta property="og:description" content="I am a Student and a working student as a Software Developer. Check out my projects :)">
+    <meta property="og:image" content="https://imgur.com/xfotdIY.png">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="https://imgur.com/xfotdIY.png">
+    <meta property="twitter:url" content="https://zubeirtech.herokuapp.com/">
+    <meta property="twitter:title" content="ZubeirTech - Student and Software Developer">
+    <meta property="twitter:description" content="I am a Student and a working student as a Software Developer. Check out my projects :)">
+    <meta property="twitter:image" content="https://imgur.com/xfotdIY.png">
 
     {{content-for "head"}}
 
