--- a/app/index.html
+++ b/app/index.html
@@ -8,21 +8,21 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!-- Primary Meta Tags -->
     <meta name="title" content="ZubeirTech - Student and Software Developer">
-    <meta name="description" content="I am a Student and a Software Engineering Intern. Check out my projects :)">
+    <meta name="description" content="Started programming August 2017 since then my life pretty much revolves around software - Software Engineering Intern since August 2018 - Data Science and AI Student. Check out my projects :)">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://zubeirtech.dev">
     <meta property="og:title" content="ZubeirTech - Student and Software Developer">
     <meta property="og:description" content="Started programming August 2017 since then my life pretty much revolves around software - Software Engineering Intern since August 2018 - Data Science and AI Student. Check out my projects :)">
-    <meta property="og:image" content="logo.png">
+    <meta property="og:image" content="zubeirtech_mtimage.png">
     
     <!-- Twitter -->
-    <meta property="twitter:card" content="logo.png">
+    <meta property="twitter:card" content="zubeirtech_mtimage.png">
     <meta property="twitter:url" content="https://zubeirtech.dev">
     <meta property="twitter:title" content="ZubeirTech - Student and Software Developer">
     <meta property="twitter:description" content="Started programming August 2017 since then my life pretty much revolves around software - Software Engineering Intern since August 2018 - Data Science and AI Student. Check out my projects :)">
-    <meta property="twitter:image" content="logo.png">
+    <meta property="twitter:image" content="zubeirtech_mtimage.png">
 
     {{content-for "head"}}
 
