--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/zubeirdev.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/zubeirtech.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css">
 
@@ -55,7 +55,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/zubeirdev.js"></script>
+    <script src="{{rootURL}}assets/zubeirtech.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script>new WOW().init();</script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
