--- a/app/index.html
+++ b/app/index.html
@@ -12,14 +12,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://zubeirtech.dev">
+    <meta property="og:url" content="https://zubeirtech.dev/">
     <meta property="og:title" content="ZubeirTech - Student and Software Developer">
     <meta property="og:description" content="Started programming August 2017 since then my life pretty much revolves around software - Software Engineering Intern since August 2018 - Data Science and AI Student. Check out my projects :)">
     <meta property="og:image" content="zubeirtech_mtimage.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="zubeirtech_mtimage.png">
-    <meta property="twitter:url" content="https://zubeirtech.dev">
+    <meta property="twitter:url" content="https://zubeirtech.dev/">
     <meta property="twitter:title" content="ZubeirTech - Student and Software Developer">
     <meta property="twitter:description" content="Started programming August 2017 since then my life pretty much revolves around software - Software Engineering Intern since August 2018 - Data Science and AI Student. Check out my projects :)">
     <meta property="twitter:image" content="zubeirtech_mtimage.png">
